Corrected a bug where the tooltip div was not been hidden by default

--- a/omw/static/css/common.css
+++ b/omw/static/css/common.css
@@ -81,24 +81,17 @@ body {
 
  /* This the class for a hidden tooltip div to populate and show on hover of elements */
 #divtooltip {
-    /* max-width: 10%; */
-    /* min-width: 10%; */
-    /* max-width: 50%; */
+    max-width: 70%;
     position: absolute;
-    /* top: 8ex; */
-    /* right: 2ex; */
     border: 2px solid black;
     border-radius: 1ex;
     padding: 1ex;
     z-index: 100;
     background-color: white;
-    /* display: none; */
-    /* position:fixed; */
-    /* overflow:hidden; */
     display: inline-block;
 }
-/*  links for senses */
 
+/*  links for senses */
 a.sense:link {
     color:#000000;
     text-decoration: none;
